Thu Aug  7 14:22:42 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/App_Code/UnitTestActions.cs:
        * utils/BMW/website/performance.aspx.cs:
        * utils/BMW/website/unittestchart.aspx:
        * utils/BMW/website/unittestchart.aspx.cs:

          . Bug fix where the dataset charted for the unit test was not
            correct. This was fixed by extending the new methods used to
            evaluate a single unit test below to return the entire dataset
            if needed.

          . The title for the chart now shows the evaluation function. We
            should also show the log messages that are used in the evaluation
            on this page.

        * utils/BMW/website/UT_Chart.aspx:
        * utils/BMW/website/UT_Chart.aspx.cs:

          . Removed these files.

Thu Aug  7 05:26:33 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-unittest.sql:

          . Implemented several stored procedures to that make it easier
            to evaluate a unit test.

        * utils/BMW/website/App_Code/LogFormatActions.cs:
        * utils/BMW/website/App_Code/Relation.cs:
        * utils/BMW/website/App_Code/Relations.cs:
        * utils/BMW/website/App_Code/UnitTestActions.cs:
        * utils/BMW/website/App_Code/VariableTable.cs:
        * utils/BMW/website/BMW.master:
        * utils/BMW/website/UT_Chart.aspx.cs:
        * utils/BMW/website/logformats.aspx:
        * utils/BMW/website/logformats.aspx.cs:
        * utils/BMW/website/performance.aspx.cs:
        * utils/BMW/website/unittest.aspx:
        * utils/BMW/website/unittest.aspx.cs:

          . Fixed several obvious formatting issues to make it easier for
            me to debug all the errors. Hamilton will be responsible for
            fixing the remaining code formatting issues.

          . Bug fix where performing aggregation using the database
            calculated an incorrect result. This is because the database